# catch-the-target

./: CMakeLists.txt  build_run_game.sh  main.cpp
sprites/: GameMapSprite.cpp  GameMapSprite.h  PlayerSprite.cpp  PlayerSprite.h
